--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "main": "dist/index.js",
   "types": "index.d.ts",
   "dependencies": {
+    "@types/mongodb": "^3.1.2",
     "massive": "^5.1.3",
+    "mongodb": "^3.1.1",
     "pg-promise": "^8.4.5",
     "request": "^2.87.0",
     "request-promise-native": "^1.0.5"
